--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [faculty, postdoc, staff]
+- - roles: [faculty, staff, postdoc]
     width: 4
     image: true
-  - roles: [phd, masters, ugrad]
-    width: 8
+  - roles: [phd, masters]
+    width: 4
     image: true
-- - roles: [collab, ugrad-alum]
+- - roles: [fellow, intern]
     width: 5
     image: false
   - roles: [alum]
@@ -19,18 +19,69 @@ role-tables:
     image: false
 
 ---
+<head>
 
-<div class="jumbotron">
-    <p>
-        The <b>Robotic Exploration Lab</b> in <b>The Robotics Institute</b> at <b>Carnegie Mellon University</b> conducts research in control, motion planning, and navigation for robotic systems that explore our planet and our universe.
-    </p>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<!--<div class="jumbotron">-->
+<!--    <p>-->
+<!--        The <b>Robotic Exploration Lab</b> in <b>The Robotics Institute</b> at <b>Carnegie Mellon University</b> conducts research in navigation, control, and motion planning for robotic systems that explore our planet and our universe.-->
+<!--    </p>-->
+<!--</div>-->
+
+<div class="container">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="{{ site.base }}/img/stoch3.GIF" alt="gaits" style="height:100%; margin-left: auto; margin-right: auto;">
+      </div>
+
+      <div class="item">
+        <img src="/img/Stoch2Intro1.gif" alt="Los Angeles" style="height:100%;">
+<!--          <video width="1126" height="440"  autoplay preload="">-->
+<!--  <source src="video/Stoch_Intro1.mp4" type="video/mp4">-->
+<!--  Your browser does not support the video tag.-->
+<!--</video>-->
+      </div>
+      
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
 
+<div class="lab_bio"> <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">We are a team of legged robot enthusiasts based out of Indian Institute of Science, Bengaluru. We are mainly interested in advanced mobility in extremely challenging terrains. The team consists of technical staff members, students, interns and faculty with varying backgrounds and interests.</p>
+</div>
 <section>
-    <h2>Latest News</h2>
-    <div class="tweets">
-        <a class="twitter-timeline" data-lang="en" data-width="700" data-height="500" data-dnt="true" data-theme="light" data-chrome="noheader" href="https://twitter.com/cmurexlab?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+    <h2>News</h2>
+    <ul class="news list-unstyled">
+        {% for post in site.posts limit: site.front_page_news %}
+            {% include news-item.html item=post %}
+        {% endfor %}
+    </ul>
+    {% assign numposts = site.posts | size %}
+    {% if numposts >= 1 %}
+        <p>
+            <span class="fa fa-fw fa-history"></span>
+            <a href="{{ site.base }}/blog.html">Older posts&hellip;</a>
+        </p>
+    {% endif %}
 </section>
 
 <section>
